# gpt4ocr

./: .gitignore  Cargo.toml  LICENSE  prompt_ocr.md  readme.md
src/: errors.rs  file_handlers.rs  gpt4o.rs  images_from_pdf.rs  lib.rs  main.rs  ocr.rs
src/internals/: errors.rs  gpt4o.rs  image_handlers.rs  images_from_pdf.rs  mod.rs  prompts.rs
