[package]
name = "gpt4ocr"
version = "0.3.0"
edition = "2021"
authors = ["Dhruvajyoti Sarma <onlinedhruva71@gmail.com>"]
license = "MIT"

[dependencies]
dotenvy = "0.15.7"
image = "0.25.2"
openai-api-rs = "5.0.4"
pdf2image = "0.1.2"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
base64 = "0.22.1"
